feat: Add MeetingForm component for scheduling meetings
- Implemented MeetingForm with fields for name, email, and date/time.
- Added styling for the form and integrated an image.

feat: Create Videos section with translation support

- Developed Videos component to display a title and VideoCards.
- Integrated i18n for translation of the section title.

feat: Implement VideoCards component to display video content

- Created VideoCards component to render a list of video cards.
- Each card includes an embedded YouTube video and a title with translation support.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -57,5 +57,12 @@
     "Expert in Waqf and Islamic Finance": "Expert in Waqf and Islamic Finance",
     "Dr. Magda Ismail, a Ph.D. graduate from IIUM, is an Associate Professor at INCEIF University (Malaysia) specializing in waqf and Islamic finance. She has advised global institutions like UNICEF and ISRA on waqf-linked sukuk, cash waqf, and financial inclusion.": "Dr. Magda Ismail, a Ph.D. graduate from IIUM, is an Associate Professor at INCEIF University (Malaysia) specializing in waqf and Islamic finance. She has advised global institutions like UNICEF and ISRA on waqf-linked sukuk, cash waqf, and financial inclusion.",
     "International Islamic Finance Experts Panel": "International Islamic Finance Experts Panel",
-    "Our Partners and Clients!": "Our Partners and Clients!"
+    "Our Partners and Clients!": "Our Partners and Clients!",
+    "Our Videos": "Our Videos",
+    "What is Islamic Finance?": "What is Islamic Finance?",
+    "What is the state of Islamic finance in Uzbekistan?": "What is the state of Islamic finance in Uzbekistan?",
+    "The path to Islamic finance ecosystem is clear...": "The path to Islamic finance ecosystem is clear...",
+    "Why Islamic Finance is Necessary?": "Why Islamic Finance is Necessary?",
+    "Islamic Finance Today: Needs, Demand, and Opportunities": "Islamic Finance Today: Needs, Demand, and Opportunities",
+    "Will the 'Halal' label affect the development of Islamic finance?": "Will the 'Halal' label affect the development of Islamic finance?"
 }
