--- a/src/locales/uz/translation.json
+++ b/src/locales/uz/translation.json
@@ -56,5 +56,12 @@
     "Expert in Waqf and Islamic Finance": "Vaqf va Islomiy Moliya Mutaxassisi",
     "Dr. Magda Ismail, a Ph.D. graduate from IIUM, is an Associate Professor at INCEIF University (Malaysia) specializing in waqf and Islamic finance. She has advised global institutions like UNICEF and ISRA on waqf-linked sukuk, cash waqf, and financial inclusion.": "Dr. Magda Ismail, IIUM universitetidan doktorlik darajasiga ega, INCEIF universitetida (Malayziya) vaqf va islomiy moliya bo'yicha dotsentdir. U UNICEF va ISRA kabi global tashkilotlarga waqfga bog'liq sukuk, naqd waqf va moliyaviy inklyuziya bo'yicha maslahat bergan.",
     "International Islamic Finance Experts Panel": "Xalqaro Islomiy Moliya Mutaxassislari Paneli",
-    "Our Partners and Clients!": "Bizning Hamkorlarimiz va Mijozlarimiz!"
+    "Our Partners and Clients!": "Bizning Hamkorlarimiz va Mijozlarimiz!",
+    "Our Videos": "Bizning Videolarimiz",
+    "What is Islamic Finance?": "Islomiy moliya – nima u?",
+    "What is the state of Islamic finance in Uzbekistan?": "O'zbekistonda islomiy moliya holati qanday?",
+    "The path to Islamic finance ecosystem is clear...": "Islomiy moliya ekotizimiga yo'l aniq...",
+    "Why Islamic Finance is Necessary?": "Nima uchun Islomiy moliya zarur?",
+    "Islamic Finance Today: Needs, Demand, and Opportunities": "Islomiy moliya bugun: ehtiyojlar, talab va imkoniyatlar",
+    "Will the 'Halal' label affect the development of Islamic finance?": "‘Halal’ yorlig'i islomiy moliyaning rivojlanishiga ta'sir qiladimi?"
 }
