feat: Add Contacts and Footer components, enhance MeetingForm with new fields and translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -64,5 +64,9 @@
     "The path to Islamic finance ecosystem is clear...": "The path to Islamic finance ecosystem is clear...",
     "Why Islamic Finance is Necessary?": "Why Islamic Finance is Necessary?",
     "Islamic Finance Today: Needs, Demand, and Opportunities": "Islamic Finance Today: Needs, Demand, and Opportunities",
-    "Will the 'Halal' label affect the development of Islamic finance?": "Will the 'Halal' label affect the development of Islamic finance?"
+    "Will the 'Halal' label affect the development of Islamic finance?": "Will the 'Halal' label affect the development of Islamic finance?",
+    "Your Name": "Your Name",
+    "Your Email Address": "Your Email Address",
+    "Your Phone Number": "Your Phone Number",
+    "Message": "Message"
 }
