--- a/src/locales/uz/translation.json
+++ b/src/locales/uz/translation.json
@@ -63,5 +63,9 @@
     "The path to Islamic finance ecosystem is clear...": "Islomiy moliya ekotizimiga yo'l aniq...",
     "Why Islamic Finance is Necessary?": "Nima uchun Islomiy moliya zarur?",
     "Islamic Finance Today: Needs, Demand, and Opportunities": "Islomiy moliya bugun: ehtiyojlar, talab va imkoniyatlar",
-    "Will the 'Halal' label affect the development of Islamic finance?": "‘Halal’ yorlig'i islomiy moliyaning rivojlanishiga ta'sir qiladimi?"
+    "Will the 'Halal' label affect the development of Islamic finance?": "‘Halal’ yorlig'i islomiy moliyaning rivojlanishiga ta'sir qiladimi?",
+    "Your Name": "Ismingiz",
+    "Your Email Address": "Sizning elektron pochta manzilingiz",
+    "Your Phone Number": "Sizning telefon raqamingiz",
+    "Message": "Xabar"
 }
