feat: Refactor App structure, enhance Footer with contact links, add Profile page and update translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -13,7 +13,7 @@
     "Successfully logged in": "Successfully logged in",
     "Our Services": "Our Services",
     "The primary goal of Al Muamalat Consulting is to contribute to the comprehensive development of Islamic finance in Uzbekistan and Central Asia, considering the interests of the countries and in accordance with existing regulations.": "The primary goal of Al Muamalat Consulting is to contribute to the comprehensive development of Islamic finance in Uzbekistan and Central Asia, considering the interests of the countries and in accordance with existing regulations.",
-    "To be the leading consulting firm in Central Asia, fostering a robust and inclusive Islamic finance ecosystem that empowers individuals and businesses, and promotes sustainable economic growth in the region": "To be the leading consulting firm in Central Asia, fostering a robust and inclusive Islamic finance ecosystem that empowers individuals and businesses, and promotes sustainable economic growth in the region", 
+    "To be the leading consulting firm in Central Asia, fostering a robust and inclusive Islamic finance ecosystem that empowers individuals and businesses, and promotes sustainable economic growth in the region": "To be the leading consulting firm in Central Asia, fostering a robust and inclusive Islamic finance ecosystem that empowers individuals and businesses, and promotes sustainable economic growth in the region",
     "We help local Islamic finance organizations establish practical cooperation with Islamic finance organizations in Turkey, Indonesia, and Malaysia. We organize experience exchange trips.": "We help local Islamic finance organizations establish practical cooperation with Islamic finance organizations in Turkey, Indonesia, and Malaysia. We organize experience exchange trips.",
     "We provide short-term training courses, expert-led seminars, conferences, and training trips to leading Islamic financial institutions.": "We provide short-term training courses, expert-led seminars, conferences, and training trips to leading Islamic financial institutions.",
     "International Cooperation": "International Cooperation",
@@ -68,5 +68,13 @@
     "Your Name": "Your Name",
     "Your Email Address": "Your Email Address",
     "Your Phone Number": "Your Phone Number",
-    "Message": "Message"
+    "Message": "Message",
+    "Tashkent City, Mirzo Ulugbek District, Lashkarbegi MFY, 59 Independence": "Tashkent City, Mirzo Ulugbek District, Lashkarbegi MFY, 59 Independence",
+    "Quick Links": "Quick Links",
+    "© Al Muamalat. Barcha Huquqlar Himoyalangan.": "© Al Muamalat. Barcha Huquqlar Himoyalangan.",
+    "Log out": "Log out",
+    "Update": "Update",
+    "Address": "Address",
+    "Full Name": "Full Name",
+    "Profile": "Profile"
 }
