--- a/src/locales/uz/translation.json
+++ b/src/locales/uz/translation.json
@@ -67,5 +67,13 @@
     "Your Name": "Ismingiz",
     "Your Email Address": "Sizning elektron pochta manzilingiz",
     "Your Phone Number": "Sizning telefon raqamingiz",
-    "Message": "Xabar"
+    "Message": "Xabar",
+    "Tashkent City, Mirzo Ulugbek District, Lashkarbegi MFY, 59 Independence": "Toshkent shahri, Mirzo Ulug'bek tumani, Lashkarbegi MFY, 59 Mustaqillik",
+    "Quick Links": "Tezkor Havolalar",
+    "© Al Muamalat. Barcha Huquqlar Himoyalangan.": "© Al Muamalat. Barcha Huquqlar Himoyalangan.",
+    "Log out": "Chiqish",
+    "Update": "Yangilash",
+    "Address": "Manzil",
+    "Full Name": "To'liq Ism",
+    "Profile": "Profil"
 }
